# tscprojpy

./: .gitignore  CHANGELOG.md  GEMINI.md  PLAN-REVISED.md  PLAN-VERSION-TIMESCALE.md  PLAN.md  README.md  TODO-VERSION-TIMESCALE.md  TODO.md  WORK.md  pyproject.toml  test_scaled.tscproj
.github/workflows/: ci.yml
docs/: README.md  tscproj-format.md
docs/tscproj-format/: 00-toc.md  01-overview.md  02-root-properties.md  03-source-media.md  04-timeline-structure.md  05-media-types.md  06-animation-keyframes.md  07-effects-transitions.md  08-positioning-scaling.md  09-version-differences.md
isues/: 101.txt
src/tscprojpy/: __init__.py  cli.py  direct_scaler.py  scaler.py
src/tscprojpy/models/: __init__.py  canvas.py  factory.py  media.py  project.py  source.py  timeline.py
src/tscprojpy/serialization/: __init__.py  json_encoder.py  loader.py  saver.py  version.py
src/tscprojpy/transforms/: __init__.py  engine.py
tests/: __init__.py  test_cli.py  test_models.py  test_serialization.py  test_transforms.py
