# this_file: tscprojpy/pyproject.toml
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tscprojpy"
dynamic = ["version"]
description = "A modern Python project template"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Adam Twardoch", email = "adam+github@twardoch.com"},
]
maintainers = [
    {name = "Adam Twardoch", email = "adam+github@twardoch.com"},
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fire>=0.7.0",
    "loguru>=0.7.3",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "twine>=4.0.0",
    "build>=1.0.0",
]

[project.scripts]
tscprojpy = "tscprojpy.cli:main"

[project.urls]
Homepage = "https://github.com/twardoch/tscprojpy"
Documentation = "https://github.com/twardoch/tscprojpy"
Repository = "https://github.com/twardoch/tscprojpy"
Issues = "https://github.com/twardoch/tscprojpy/issues"
Changelog = "https://github.com/twardoch/tscprojpy/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/tscprojpy/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tscprojpy"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "N",  # pep8-naming
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused

[tool.ruff.lint.isort]
known-first-party = ["tscprojpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=tscprojpy",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source_pkgs = ["tscprojpy"]
branch = true
parallel = true

[tool.coverage.paths]
tscprojpy = ["src/tscprojpy", "*/tscprojpy/src/tscprojpy"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
